unpackaged/main/default/objects/API_Connector__IWS_Advanced_Address_Service_Settings__c/API_Connector__IWS_Advanced_Address_Service_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting will be used to store credentials for IWS Advanced Address Information Service</description>
    <label>IWS Advanced Address Service Settings</label>
</CustomObject>