unpackaged/main/default/objects/API_Connector__IWS_Advanced_Address_Service_Settings__c/fields/API_Connector__Endpoint_Url__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Endpoint_Url__c</fullName>
    <description>This is the endpoint url of IWS service for retrieving information related to french companies.</description>
    <label>Endpoint Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>