unpackaged/main/default/objects/API_Connector__IWS_Advanced_Address_Service_Settings__c/fields/API_Connector__IWS_Advanced_Address_Identification__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Advanced_Address_Identification__c</fullName>
    <label>IWS Advanced Address Identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>