unpackaged/main/default/objects/API_Connector__IWS_Advanced_Address_Service_Settings__c/fields/API_Connector__Password__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Password__c</fullName>
    <description>This Field is used to store the password of IWS Advanced Address Information Service.</description>
    <inlineHelpText>This Field is used to store the password of IWS Advanced Address Information Service.</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>