unpackaged/main/default/objects/API_Connector__IWS_Advanced_Address_Service_Settings__c/fields/API_Connector__Siret_Number_Input_Field__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Siret_Number_Input_Field__c</fullName>
    <label>Siret Number Input Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>